--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,15 @@
 @font-face {
     font-family: 'goldmanbold';
-    src: url('./assets/goldman-bold.woff2') format('woff2'),
-         url('./assets/goldman-bold.woff') format('woff');
+    src: url('./assets/fonts/goldman-bold.woff2') format('woff2'),
+         url('./assets/fonts/goldman-bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'montserrat';
+    src: url('./assets/fonts/montserrat.woff2') format('woff2'),
+            url('./assets/fonts/montserrat.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -9,10 +17,11 @@
 h1, h2, h3, h4, h5, h6, p, a {
     margin: 0;
     padding: 0;
+    font-family: montserrat, sans-serif;
 }
 
-h1 {
-    font-family: goldmanbold;
+h1, h2, h3 {
+    font-family: goldmanbold, sans-serif;
 }
 
 .logo {
@@ -50,4 +59,10 @@ h1 {
     border: 1px solid black;
     max-width: 50%;
     padding: 16px;
+}
+
+@media (max-width: 700px) {
+    .main {
+        max-width: 100%;
+    }
 }
