--- a/src/style.scss
+++ b/src/style.scss
@@ -14,14 +14,34 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'bilboswash';
+    src: url('./assets/fonts/bilboswashcaps.woff2') format('woff2'),
+         url('./assets/fonts/bilboswashcaps.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+body {
+    background-image: url('./assets/images/bg.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
 h1, h2, h3, h4, h5, h6, p, a {
     margin: 0;
     padding: 0;
     font-family: montserrat, sans-serif;
 }
 
+p {
+    color: white;
+}
+
 h1, h2, h3 {
     font-family: goldmanbold, sans-serif;
+    color: rgb(10, 38, 71);
 }
 
 .logo {
@@ -33,11 +53,14 @@ h1, h2, h3 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid grey;
+    border: 1px solid white;
     border-radius: 50%;
+    box-shadow: inset 2px 2px 2px 4px rgba(255, 255, 255, 0.1);
 
     h1 {
-        font-size: 1rem;
+        font-size: 1.4rem;
+        color: white;
+        font-family: bilboswash;
     }
 
     img {
@@ -49,16 +72,22 @@ h1, h2, h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
     max-width: 66%;
     margin: 0 auto;
     gap: 8px;
+    border-radius: 16px;
+    background-color: rgba(44, 116, 179, 0.85);
+    padding: 16px 0;
 }
 
 .info-wrapper {
-    border: 1px solid black;
-    max-width: 50%;
+    width: 50%;
     padding: 16px;
+
+    > p {
+        margin-top: 8px;
+        padding-left: 16px;
+    }
 }
 
 @media (max-width: 700px) {
