--- a/src/style.scss
+++ b/src/style.scss
@@ -73,15 +73,12 @@ h1, h2, h3, h4, h5, h6, p, a {
     margin: 0;
     padding: 0;
     font-family: montserrat, sans-serif;
-}
-
-p {
     color: white;
 }
 
 h1, h2, h3 {
     font-family: goldmanbold, sans-serif;
-    color: rgb(10, 38, 71);
+    text-shadow: 4px 4px 8px rgb(10, 38, 71);
 }
 
 .logo {
@@ -127,6 +124,25 @@ h1, h2, h3 {
     > p {
         margin-top: 8px;
         padding-left: 16px;
+    }
+}
+
+.menu-item {
+    border: 1px solid white;
+    border-radius: 6px;
+    width: 50%;
+    padding: 16px;
+
+    > p {
+        margin: 8px 0;
+        padding-left: 16px;
+    }
+
+    img {
+        max-height: 128px;
+        border-radius: 4px;
+        margin-left: 50%;
+        transform: translateX(-50%);
     }
 }
 
