--- a/src/style.scss
+++ b/src/style.scss
@@ -90,7 +90,7 @@ h1, h2, h3 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid white;
+    border: 2px solid white;
     border-radius: 50%;
     box-shadow: inset 2px 2px 2px 4px rgba(255, 255, 255, 0.1);
 
@@ -144,6 +144,13 @@ h1, h2, h3 {
         margin-left: 50%;
         transform: translateX(-50%);
     }
+}
+
+.about-us {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 @media (max-width: 700px) {
