--- a/src/style.scss
+++ b/src/style.scss
@@ -151,10 +151,29 @@ h1, h2, h3 {
     display: flex;
     flex-direction: column;
     gap: 8px;
+
+    img {
+        max-width: 50%;
+        border-radius: 4px;
+    }
+
+    .founder-wrapper {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
+
+    .founder-para {
+        font-family: bilboswash, sans-serif;
+    }
 }
 
 @media (max-width: 700px) {
     .main {
         max-width: 95%;
+    }
+
+    .founder-wrapper {
+        flex-direction: column;
     }
 }
